--- a/themes/quizmodo/views/shared/_head.html.erb
+++ b/themes/quizmodo/views/shared/_head.html.erb
@@ -17,6 +17,8 @@
   <link rel="stylesheet" type="text/css" href="theme/stylesheets/lytebox.css">
   <link rel="stylesheet" type="text/css" href="theme/stylesheets/style.css">
   <link rel="stylesheet" href="theme/stylesheets/print.css" type="text/css" media="print">
-  
+
   <link rel="apple-touch-icon" href="/theme/images/apple-touch-icon.png">
+
+  <title>Quidnunc</title>
 </head>
