--- a/themes/quizmodo/views/shared/_footer.html.haml
+++ b/themes/quizmodo/views/shared/_footer.html.haml
@@ -2,6 +2,6 @@
   #inner-footer
     %ul#footer_siteinfo
       %li
-        %a{rel:"nofollow", href:"/faq", title:"FAQ"} FAQ
+        %a{rel:"nofollow", href:"#", title:"FAQ"} FAQ
 
     Copyright notice.
