--- a/themes/quizmodo/views/shared/_head.html.erb
+++ b/themes/quizmodo/views/shared/_head.html.erb
@@ -1,22 +1,22 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/reset.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/layout.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/header.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/modal.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/text.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/permalink.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/postlist.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/comments.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/tagpage.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/icon.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/commenter.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/hybrid.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/tweets.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/lytebox.css">
-  <link rel="stylesheet" type="text/css" href="theme/stylesheets/style.css">
-  <link rel="stylesheet" href="theme/stylesheets/print.css" type="text/css" media="print">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/reset.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/layout.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/header.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/modal.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/text.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/permalink.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/postlist.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/comments.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/tagpage.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/icon.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/commenter.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/hybrid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/tweets.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/lytebox.css">
+  <link rel="stylesheet" type="text/css" href="/theme/stylesheets/style.css">
+  <link rel="stylesheet" href="/theme/stylesheets/print.css" type="text/css" media="print">
 
   <link rel="apple-touch-icon" href="/theme/images/apple-touch-icon.png">
 
