use Markdown instead of Textile.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,8 @@
     </p>
     <p>
       <%= form.text_area 'body' %><br/>
-      <small>(<%= link_to 'lesstile enabled', 'http://lesstile.rubyforge.org' %> - surround code blocks with ---)</small>
+      <!-- <small>(<%= link_to 'lesstile enabled', 'http://lesstile.rubyforge.org' %> - surround code blocks with ---)</small> -->
+      <small>(<%= link_to 'Github-flavored Markdown enabled', 'http://github.github.com/github-flavored-markdown/' %>)</small>
     </p>
     <p><%= form.submit 'Add Comment' %></p>
   <% end -%>
