making intro text actually show up on forms and pages

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,7 @@
 <h2><%= link_to_post(post) %></h2>
 
 <div class="entry-body">
+  <%= raw(post.intro_text_html) %>
   <%= raw(post.body_html) %>
 </div>
 <div class="meta">
