fixing adding intro text to pages so it actually shows and doesn't break stuff

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
 
 <div class="entry-body">
   <%= raw(post.intro_text_html) %>
-  <%= raw(post.body_html) %>
+  <!-- <%= raw(post.body_html) %> -->
 </div>
 <div class="meta">
   <ul>
