fix html escaping bug for full-post #show page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 <% end -%>
 
 <%= render @post %>
-<%= @post.body_html %>
+<%= raw(@post.body_html) %>
 
 <ol id="comments" class="commentlist">
   <% @post.approved_comments.each do |comment| -%>
