make 'view site' in dashboard open new window or tab

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -33,7 +33,7 @@
         <li><%= nav_link_to("Actions",   admin_undo_items_path, :accesskey => '5') %></li>
         <li class="separator">&nbsp;</li>
         <li><%= link_to("Logout", admin_session_path, :accesskey => 'l', :method => :delete) %></li>
-        <li><%= link_to("View Site", root_path,       :accesskey => 'v', :title => 'View Site') %></li>
+        <li><%= link_to("View Site", root_path,       :accesskey => 'v', :title => 'View Site', :target => "_blank") %></li>
       </ul>
     </div>
   </div>
