--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form.inputs do -%>
   <%= form.input :title -%>
   <%= form.input :author %>
-  <%= form.input :intro_text, :hint => "Front page blurb. Will also appear at head of article." %>
+  <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { rows: 5 } %>
   <%= form.input :body, :hint => "<a href='http://github.github.com/github-flavored-markdown/'>Markdown enabled</a>. Use Ctrl+E to switch between preview and edit mode.".html_safe -%>
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
 <% end -%>
