--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <%= post_title @post -%>
 <% end -%>
 
-<%= render @post %>
+# <%= render @post %>
 <%= raw(@post.body_html) %>
 
 <ol id="comments" class="commentlist">
@@ -36,7 +36,6 @@
     </p>
     <p>
       <%= form.text_area 'body' %><br/>
-      <!-- <small>(<%= link_to 'lesstile enabled', 'http://lesstile.rubyforge.org' %> - surround code blocks with ---)</small> -->
       <small>(<%= link_to 'Github-flavored Markdown enabled', 'http://github.github.com/github-flavored-markdown/' %>)</small>
     </p>
     <p><%= form.submit 'Add Comment' %></p>
