code cleanup and fixing tests for omniauth-google progress

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Posts</h1>
 
+<%= link_to("(New post)", new_admin_post_path) %>
+
 <table id='posts'>
   <thead>
     <tr>
       <th>Published At</th>
       <th>Title</th>
+      <th>Author</th>
       <th>Excerpt</th>
       <th>Comments</th>
       <th>Actions</th>
