--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,8 +1,9 @@
 <tr class="<%= cycle('', 'alt') %>">
   <td><%= post.published_at.try(:strftime, '%d %b, %Y') %></td>
   <td><%= link_to (post.title == '' ? '[Untitled]' : truncate(post.title, :length => 30)), admin_post_path(post) %></td>
+  <td><%= post.author %>
   <td><% tmpc = truncate(post.body, :length => 55) %><%= (tmpc != '' ? tmpc : '&nbsp;') %></td>
-  <td><%= post.approved_comments.size %></td>
+  <!-- <td><%= post.approved_comments.size %></td> -->
   <td>
     <%= link_to(image_tag('silk/pencil.png', :alt => 'edit'), admin_post_path(post)) %>
     <%= form_for(post, :as => :post, :url => admin_post_path(post), :html => {:class => 'delete-item', :method => :delete}) do |form| -%>
