--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,16 @@
-<% content_for :page_title do -%>
-  <%= post_title @post -%>
-<% end -%>
+<h2><%= link_to_post(@post) %></h2>
 
-# <%= render @post %>
+<div class="meta">
+  <ul>
+    <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %></li>
+    <li>By <%= @post.author %></li>
+    <li class="comments"><%= link_to_post_comments @post %></li>
+    <% unless @post.tags.empty? -%>
+      <li class="tags">Tagged <%= linked_tag_list(@post.tags) %></li>
+    <% end -%>
+  </ul>
+</div>
+
 <%= raw(@post.body_html) %>
 
 <ol id="comments" class="commentlist">
