--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -4,6 +4,7 @@
   <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { rows: 5 } %>
   <%= form.input :body, :hint => "<a href='http://github.github.com/github-flavored-markdown/'>Markdown enabled</a>. Use Ctrl+E to switch between preview and edit mode.".html_safe, input_html: {rows: 30} -%>
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
+  <%= form.input :image %>
 <% end -%>
 <%= form.inputs do -%>
   <%= form.input :published_at_natural, :label => 'Published at', :as => 'string', :hint => 'Examples: now, yesterday, 1 hour from now, '.html_safe + link_to("etc".html_safe, "http://chronic.rubyforge.org/") + '. Leave blank for an unpublished draft.' -%>
