--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 </div>
 
 <% if @post.image.present? %>
-  <%= image_tag @post.image.url %>
+  <%= image_tag @post.image.url(:medium) %>
 <% end %>
 <%= raw(@post.body_html) %>
 
