--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts</h1>
 
-<%= link_to("(New post)", new_admin_post_path) %>
+<p><%= link_to("(New post)", new_admin_post_path) %></p>
 
 <table id='posts'>
   <thead>
@@ -23,12 +23,10 @@
   </tbody>
 
   <tfoot>
-    <% if @posts.total_pages > 1 -%>
       <tr class="pagination">
         <td colspan="5">
           <%= will_paginate(@posts, :previous_label => '« Newer', :next_label => 'Older »') %>
         </td>
       </tr>
-    <% end -%>
   </tfoot>
 </table>
