super hacky workaround b/c taggable_on_steroids and will_paginate don't combine nicely

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,10 +16,12 @@
    </div>
   <% end -%>
 
+  <% if @posts.class != Array %>
     <tr class="pagination">
       <td colspan="5">
         <%= will_paginate(@posts, :previous_label => '« Newer', :next_label => 'Older »') %>
       </td>
     </tr>
+  <% end %>
 
 <% end -%>
