replace acts_as_taggable_on_steroids and related hackery with acts_as_taggable_on

--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -12,7 +12,7 @@
 	<h3><%= format_month(month.date) %></h3>
 	<ul class='archive-month'>
 	  <% month.posts.each do |post| -%>
-	    <li><%= link_to(post.title, post_path(post)) %><% unless post.tags.empty? %> <span class='tags'>(<%= linked_tag_list(post.tags) %>)</span><% end -%></li>
+	    <li><%= link_to(post.title, post_path(post)) %><% unless post.tag_list.empty? %> <span class='tags'>(<%= linked_tag_list(post.tag_list) %>)</span><% end -%></li>
 	  <% end -%>
 	</ul>
 	<% end -%>
