--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <tr class="<%= cycle('', 'alt') %>">
-  <td><%= post.published_at.try(:strftime, '%d %b, %Y') %></td>
+  <td><%= post.published_at.try(:strftime, '%I %M, %d %b, %Y') %></td>
   <td><%= link_to (post.title == '' ? '[Untitled]' : truncate(post.title, :length => 30)), admin_post_path(post) %></td>
   <td><%= post.author %>
   <td><% tmpc = truncate(post.body, :length => 55) %><%= (tmpc != '' ? tmpc : '&nbsp;') %></td>
