make 'new post' bigger

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts</h1>
 
-<p><%= link_to("(New post)", new_admin_post_path) %></p>
+<h3><%= link_to("(New post)", new_admin_post_path) %></h3>
 
 <table id='posts'>
   <thead>
