--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Comments</h1>
+<!-- <h1>Comments</h1>
 
 <table id='comments'>
   <thead>
@@ -29,3 +29,4 @@
     <% end -%>
   </tfoot>
 </table>
+ -->
