--- a/app/views/admin/comments/show.html.erb
+++ b/app/views/admin/comments/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing comment by <%= @comment.author %></h1>
+<!-- <h1>Editing comment by <%= @comment.author %></h1>
 
 <%= semantic_form_for([:admin, @comment]) do |form| -%>
   <%= form.inputs do -%>
@@ -12,3 +12,4 @@
     <%= form.action :submit, :as => :button %>
   <% end -%>
 <% end -%>
+ -->
