--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,7 +10,9 @@
 </div>
 <div class="meta">
   <ul>
-    <li class="date">Posted at <%= format_post_date(post.published_at) if post.published? %></li>
+    <li class="date">Posted at <%= format_post_date(post.published_at) if post.published? %>
+      <%= updated_time(post) %>
+    </li>
     <li>By <%= post.author %></li>
     <% unless post.tag_list.empty? -%>
       <li class="tags">Tagged <%= linked_tag_list(post.tag_list) %></li>
