--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,9 @@
 
 <div class="meta">
   <ul>
-    <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %></li>
+    <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %>
+      <%= updated_time(@post) %>
+    </li>
     <li>By <%= @post.author %></li>
     <% unless @post.tag_list.empty? -%>
       <li class="tags">Tagged <%= linked_tag_list(@post.tag_list) %></li>
