start of publication status indicator

--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -9,4 +9,11 @@
       <%= image_submit_tag("silk/delete.png", :alt => 'Delete Post') %>
     <% end -%>
   </td>
+  <td>
+    <% if post.published? %>
+      published!
+    <% else %>
+      draft
+    <% end %>
+  </td>
 </tr>
