add colors to publication status

--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -11,9 +11,9 @@
   </td>
   <td>
     <% if post.published? %>
-      published!
+      <div class="published">published!</div>
     <% else %>
-      draft
+      <div class="draft">draft</div>
     <% end %>
   </td>
 </tr>
