refining and fixing sortin' stuff for post dashboard

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -5,12 +5,12 @@
 <table id='posts'>
   <thead>
     <tr>
-      <th>Published At</th>
-      <th>Title</th>
-      <th>Author</th>
+      <th><%= sortable "published_at", "Published at" %></th>
+      <th><%= sortable "title", "Title" %></th>
+      <th><%= sortable "author", "Author" %></th>
       <th>Excerpt</th>
       <th>Actions</th>
-      <th>Publication status</th>
+      <th>Publication Status</th>
     </tr>
   </thead>
 
