initial adding of disqus comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,11 @@
 <% end %>
 <%= raw(@post.body_html) %>
 
+<div id="disqus_thread"></div>
+
+<%= disqus_comments %>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 <div class="related">Looking for more? Head on over to the <%= link_to 'archives', archives_path %>.</div>
 
