--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
 <h2><%= link_to_post(post) %></h2>
 
+
 <div class="entry-body">
 
 <% if post.image.present? %>
@@ -17,5 +18,6 @@
     <% unless post.tag_list.empty? -%>
       <li class="tags">Tagged <%= linked_tag_list(post.tag_list) %></li>
     <% end -%>
+    <li><%= link_to(post.title, post_path(post, anchor: "disqus_thread")) %></li>
   </ul>
 </div>
