--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,8 +1,9 @@
+<%= tinymce_assets %>
 <%= form.inputs do -%>
   <%= form.input :title -%>
   <%= form.input :author %>
   <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { rows: 5 } %>
-  <%= form.input :body, :hint => "<a href='http://github.github.com/github-flavored-markdown/'>Markdown enabled</a>. Use Ctrl+E to switch between preview and edit mode.".html_safe, input_html: {rows: 30} -%>
+  <%= form.input :body, :hint => "<a href='http://github.github.com/github-flavored-markdown/'>Markdown enabled</a>. Use Ctrl+E to switch between preview and edit mode.".html_safe, input_html: {class: "tinymce", rows: 30} -%>
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
   <%= form.input :source_link -%>
   <p>Coming soon: image upload!</p>
@@ -15,3 +16,4 @@
   <%= form.input :slug, :hint => "Leave blank for an auto-generated slug based on the title." -%>
   <%= form.input :minor_edit, :as => 'boolean', :hint => 'Minor edits will not show up as refreshed in feed readers. Use this to fix spelling mistakes and the like.' unless @post.new_record? -%>
 <% end -%>
+<%= tinymce %>
