--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -200,7 +200,7 @@ form button {
   font: 8pt "lucida grande", "lucida sans unicode", "lucida", sans-serif;
 }
 
-form fieldset { margin-bottom: 10px; width: 622px; padding: 10px; }
+form fieldset { margin-bottom: 14px; width: 800px; padding: 10px; }
 form fieldset.buttons { text-align: center; }
 form fieldset.buttons input { width: 300px; }
 
@@ -226,8 +226,8 @@ form fieldset ol li.boolean label {
   padding-left: 100px;
 }
 
-.frogedit {
-  margin-left: 120px;
+#mce_16 {
+  margin-left: 200px;
 }
 /* ---------- TABLES */
 table {
