--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,5 +1,11 @@
 <h1>Editing post - <%= link_to_post(@post) %></h1>
 
+<% if %w(development test).include?(Rails.env) %>
+  <% if @post.image.exists? %>
+    <%= @post.image.url(:medium).to_s %>
+  <% end %>
+<% end %>
+
 <%= semantic_form_for([:admin, @post]) do |form| -%>
   <%= render :partial => 'form', :locals => {:form => form} %>
   <%= form.actions do -%>
