adjusting background image url for more justice

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,7 @@ body {
   margin: 0px; }
 
 #page_container {
-  background-image:url('diamond-background.jpg');
+  background-image: image-url('diamond-background.jpg');
   background-repeat:repeat-x;
   background-color: white;
   position: absolute;
