--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
 <div class="entry-body">
 
 <% if post.image.present? %>
-  <%= image_tag post.image.url(:small) %>
+  <%= image_tag post.image.url %>
 <% end %>
 
   <%= raw(post.intro_text_html) %>
