--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
         <input type="text" id="q" value="" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
       </form>
+      <div id="social-links">FOLLOW QUIDNUNC | Tw | FB | Li</div>
     </div>
 
 
