add space for banner ad at top and cleanup/refine other styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <div id="header">
   <div id="logo">
-      <div class="logo-element"><h1>LOGOTON</h1></div>
+      <div class="logo-element"><h1>LOGO</h1></div>
       <div class="logo-element"><h1 id="page_heading"><%= link_to 'Quidnunc Beta', root_path %></h1></div>
   </div>
 
@@ -26,6 +26,11 @@
 
 
   <div id="page_container">
+
+    <div id="ad-container">
+      an advertisement appears! Save vs. persuasion or lose 2 gold.
+    </div>
+
     <div id="content">
 
     <div id="navbar">
