--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,17 @@ body {
   padding: 0px;
   margin: 0px; }
 
+#ad-container {
+  margin: auto;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  background-color: white;
+  text-align: center;
+  padding: 6px;
+  width: 600px;
+  height: 80px;
+}
+
 #page_container {
   background-image: image-url('diamond-background.jpg');
   background-repeat:repeat-x;
@@ -37,8 +48,8 @@ body {
 #content {
   background-color: white;
   border: solid;
-  border-width: 2px;
-  border-color: #aaa;
+  border-width: 1px;
+  border-color: #ccc;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -59,6 +70,7 @@ body {
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  height: 130px;
   width: 800px;
   background-color: white;
 }
@@ -104,6 +116,7 @@ body {
   padding: 6px;
   padding-left: 14px;
   font-size: 13px;
+  border-bottom: 1px solid #cabaa0;
 }
 
 #navbar form {
@@ -142,9 +155,10 @@ body {
 
 /* Headings */
 h1#page_heading {
-  font-size: 24pt;
+  margin: 2px;
+  font-size: 22pt;
   font-weight: lighter;
-  color: orange !important; }
+  color: #f56b23 !important; }
 
 h2 {
   font-size: 1.4em;
