--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,7 @@ body {
   padding: 6px;
   width: 600px;
   height: 80px;
+  border: 1px solid red;
 }
 
 #page_container {
@@ -46,6 +47,7 @@ body {
   width: 100%; }
 
 #content {
+  box-shadow: 0px 1px 14px 0px #9a9a9a;
   background-color: white;
   border: solid;
   border-width: 1px;
@@ -132,12 +134,20 @@ body {
   margin: 5px 26px;
 }
 
+#navbar input {
+  margin-left: 18px;
+  border: 1px solid #f56b23;
+  font-size: 10px;
+  height: 16px;
+  width: 164px;
+}
+
 .ad-box {
   display: inline-block;
   margin: 12px;
   padding: 6px;
-  height: 130px;
-  width: 130px;
+  height: 160px;
+  width: 160px;
   border: solid;
   border-width: 2px;
   border-color: gray;
