--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,7 @@
     <div id="navbar">
       SUBSCRIBE | CALENDAR | SEND US DIRT | CONTACT US
       <form method="get" id="sform" action="http://www.google.com/search">
-        <label for="q">Search:</label>
-        <input type="text" id="q" value="" name="q">
+        <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
       </form>
       <div id="social-links">FOLLOW QUIDNUNC | Tw | FB | Li</div>
