--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
 <h2><%= link_to_post(post) %></h2>
 
+<p><%= distance_of_time_in_words_to_now(post.published_at) %> ago</p>
 
 <div class="entry-body">
 
