--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -4,12 +4,11 @@
 </div>
 
 <div id="recent-posts" class="panel">
-<h2>Latest Posts</h2>
+<h2>Drafts in progress</h2>
 <ul>
   <% @posts.each_with_index do |post, i| -%>
     <li class="<%= i == 0 ? 'first ' : '' %>item">
       <h3><%= link_to(truncate(post.title, :length => 50), admin_post_path(post)) %></h3>
-      <span class='date'><%= post.published_at.strftime("%b %e") %></span>
     </li>
   <% end -%>
 </ul>
