refine source link display stuff, update Gemfile to use latest Chronic, and enable time zones

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
 <%= raw(@post.body_html) %>
 
 <% if @post.source_link != '' %>
-  Source: <%= link_to @post.source_link %>
+  Source: <a href= <%= @post.source_link %> ><%= @post.source_link %></a>
 <% end %>
 
 <div id="disqus_thread"></div>
