--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -295,6 +295,22 @@ div.meta {
 .archive-month .tags {
   color: #bbbbbb; }
 
+.tag1 {
+  font-size: 1.0em;
+}
+
+.tag2 {
+  font-size: 1.2em;
+}
+
+.tag3 {
+  font-size: 1.4em;
+}
+
+.tag4 {
+  font-size: 1.6em;
+}
+
 .meta a, .archive-month .tags a {
   border-bottom: dotted 1px #bbbbbb; }
 
