--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
           <h2>Tag Cloud</h2>
 
           <div>
-            <% tag_cloud(@tags, %w(tag1 tag2 tag3 tag4)) do |tag, css_class| %>
+            <% tag_cloud(@tags, %w(small-tag med-tag large-tag)) do |tag, css_class| %>
               <%= link_to tag.name, posts_path(:tag => tag.name), class: css_class %>
             <% end %>
           </div>
