add rich text editor to intro text field

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -175,7 +175,7 @@ form fieldset ol li.boolean label {
   padding-left: 100px;
 }
 
-#mce_11 {
+#mce_11, #mce_38 {
   margin-left: 200px;
 }
 /* ---------- TABLES */
