--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -2,8 +2,8 @@
 <%= form.inputs do -%>
   <%= form.input :title -%>
   <%= form.input :author %>
-  <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { rows: 5 } %>
-  <%= form.input :body, input_html: {class: "tinymce" } -%>
+  <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { class: "tinymce", rows: 12 } %>
+  <%= form.input :body, input_html: {class: "tinymce", rows: 24 } -%>
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
   <%= form.input :source_link -%>
   <p>Coming soon: image upload!</p>
@@ -14,4 +14,4 @@
   <%= form.input :slug, :hint => "Leave blank for an auto-generated slug based on the title." -%>
   <%= form.input :minor_edit, :as => 'boolean', :hint => 'Minor edits will not show up as refreshed in feed readers. Use this to fix spelling mistakes and the like.' unless @post.new_record? -%>
 <% end -%>
-<%= tinymce height: 420, width: 576 %>
+<%= tinymce width: 576 %>
