add 'more...' link to full post at end of intro text for posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,6 +9,9 @@
 <% end %>
 
   <%= raw(post.intro_text_html) %>
+  <% if post.body_html %>
+    <%= link_to("[more...]", post_path(post)) %>
+  <% end %>
 </div>
 <div class="meta">
   <ul>
